--- a/ibk/_variables.scss
+++ b/ibk/_variables.scss
@@ -7,6 +7,11 @@ $base-name-blink: blink;
 $base-name-fade-in: fade-in;
 $base-name-fade-out: fade-out;
 $base-name-move-in: move-in;
+$base-name-pulse: pulse;
+$base-name-moveup: move-up;
+$base-name-move-down: move-down;
+$base-name-move-right: move-right;
+$base-name-move-left: move-left;
 
 // animation timing/count
 $base-time: 2s;
@@ -15,11 +20,19 @@ $base-infinite: infinite;
 
 // Maps of animation-timing-function
 $base-timing-function: (
-'linear':linear,
-'ease': ease,
-'ease-in': ease-in,
-'ease-out': ease-out,
-'ease-in-out': ease-in-out,
+'ln':linear,
+'es': ease,
+'es-in': ease-in,
+'es-out': ease-out,
+'es-in-out': ease-in-out,
+);
+
+// Maps of animation-direction
+$base-animation-direction: (
+'nm': normal,
+'rev': reverse,
+'alt': alternate,
+'alt-rev': alternate-reverse,
 );
 
 // Maps of duration in ms
@@ -39,9 +52,4 @@ $base-duration-two: (
 'vslow': 3s,
 );
  
-
-// @debug map-get($base-timing-function,'linear'); get Value 
-// @debug map-has-key($base-timing-function,'linear');
-// @debug map-remove($base-timing-function,'linear');
-// @debug map-merge($base-timing-function,('line': line));
 
