--- a/ibk/animations/_bounce.scss
+++ b/ibk/animations/_bounce.scss
@@ -1,3 +1,8 @@
+.bounce {
+    animation: bounce 1s linear infinite;
+  }
+
+
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
     40% {transform: translateY(-30px);}
@@ -11,11 +16,17 @@ $val in $base-timing-function {
         animation: $base-name-bounce $base-time $val $base-infinite;
     }
 
-    @for $i from 1 through 3 {
+    @for $i from 1 through 5 {
         .bounce-#{$key}-#{$i * 2} {
             animation: $base-name-bounce $base-time ($i * 2) $val;
         }
     }
 }
 
-// animation: bounce 2s ease infinite;
+@each $key,
+$val in $base-timing-function {
+    .hov-bounce-#{$key}:hover {
+        animation: $base-name-bounce $base-time $val $base-infinite;
+    }
+}
+
