--- a/ibk/animations/_movedown.scss
+++ b/ibk/animations/_movedown.scss
@@ -1,6 +1,6 @@
 .move-down {
     position: relative;
-    animation: $base-name-move-down 1s infinite  normal ease-out;
+    animation: $base-name-move-down 1s normal ease-out 3;
 }
 
 
