--- a/ibk/animations/_moveleft.scss
+++ b/ibk/animations/_moveleft.scss
@@ -1,6 +1,6 @@
 .move-left {
     position: relative;
-    animation: $base-name-move-left 1s normal ease-in-out infinite;
+    animation: $base-name-move-left 1s normal ease-in-out 3;
 }
 
 
