--- a/ibk/animations/_moveright.scss
+++ b/ibk/animations/_moveright.scss
@@ -1,6 +1,6 @@
 .move-right {
     position: relative;
-    animation: $base-name-move-right 1s infinite  normal ease-out;
+    animation: $base-name-move-right 1s normal ease-out 3;
 }
 
 
