--- a/ibk/animations/_moveup.scss
+++ b/ibk/animations/_moveup.scss
@@ -1,6 +1,6 @@
 .move-up {
     position: relative;
-    animation: $base-name-moveup 1s normal ease-out infinite;
+    animation: $base-name-moveup 1s normal ease-out 3;
 }
 
 
