--- a/ibk/animations/_moveright.scss
+++ b/ibk/animations/_moveright.scss
@@ -21,11 +21,13 @@ $val1 in $base-duration-two {
     $val2 in $base-animation-direction {
 
         .move-right-#{$key1}-#{$key2}-infinite {
+            position: relative;
             animation: $base-name-move-right $val1 $val2 $base-infinite;
         }
 
         @for $i from 1 through 5 {
             .move-right-#{$key1}-#{$key2}-#{$i * 2} {
+                position: relative;
                 animation: $base-name-move-right $val1 $val2 $i * 2;
             }
         }
@@ -40,6 +42,7 @@ $val1 in $base-duration-two {
     $val2 in $base-animation-direction {
 
         .hov-move-right-#{$key1}-#{$key2}:hover {
+            position: relative;
             animation: $base-name-move-right $val1 $val2 $base-infinite;
         }
 
