--- a/ibk/animations/_moveup.scss
+++ b/ibk/animations/_moveup.scss
@@ -22,11 +22,13 @@ $val1 in $base-duration-two {
     $val2 in $base-animation-direction {
 
         .move-up-#{$key1}-#{$key2}-infinite {
+            position: relative;
             animation: $base-name-moveup $val1 $val2 $base-infinite;
         }
 
         @for $i from 1 through 5 {
             .move-up-#{$key1}-#{$key2}-#{$i * 2} {
+                position: relative;
                 animation: $base-name-moveup $val1 $val2 $i * 2;
             }
         }
@@ -42,6 +44,7 @@ $val1 in $base-duration-two {
     $val2 in $base-animation-direction {
 
         .hov-move-up-#{$key1}-#{$key2}:hover {
+            position: relative;
             animation: $base-name-moveup $val1 $val2 $base-infinite;
         }
 
